--- a/views/fragments/select-collegenumber2.twig
+++ b/views/fragments/select-collegenumber2.twig
@@ -1,4 +1,5 @@
-<label for="collegenumber2" class="text">Provincia donde se colegió por primera vez</label>
+<label for="collegenumber2" class="text">Provincia donde se colegió por primera vez<sup>*</sup>
+</label>
 <select id="collegenumber2">
 	<option value="hide" selected="selected">Siguientes 2 dígitos</option>
 	<option value="01-Álava">01 - Álava</option>
