--- a/views/fragments/select-specialties.twig
+++ b/views/fragments/select-specialties.twig
@@ -1,15 +1,14 @@
-<label for="specialty" class="text">Especialidad</label>
+<label for="specialty" class="text">Especialidad<sup>*</sup>
+</label>
 <select id="specialty">
-	<option value="hide" selected="selected">Elige una de las opciones</option>
-	<option value="Cardiología">Cardiología</option>
-	<option value="Medicina Interna">Medicina Interna</option>
-	<option value="Endocrinología y Nutrición">Endocrinología y Nutrición</option>
+	<option value="hide" selected="selected">Seleccione...</option>
 	<option value="Alergología">Alergología</option>
 	<option value="Anatomía Patológica">Anatomía Patológica</option>
 	<option value="Anestesiología">Anestesiología</option>
 	<option value="Angiología y Cirugía Vascular">Angiología y Cirugía Vascular</option>
 	<option value="Aparato Digestivo">Aparato Digestivo</option>
 	<option value="Bioquímica Clínica">Bioquímica Clínica</option>
+	<option value="Cardiología">Cardiología</option>
 	<option value="Cirugía Cardiovascular">Cirugía Cardiovascular</option>
 	<option value="Cirugía General y del Aparato Digestivo">Cirugía General y del Aparato Digestivo</option>
 	<option value="Cirugía Oral y Maxilofacial">Cirugía Oral y Maxilofacial</option>
@@ -18,6 +17,7 @@
 	<option value="Cirugía Torácica">Cirugía Torácica</option>
 	<option value="Dermatología">Dermatología</option>
 	<option value="Dermatología Médico-Quirúrgica y Venereología">Dermatología Médico-Quirúrgica y Venereología</option>
+	<option value="Endocrinología y Nutrición">Endocrinología y Nutrición</option>
 	<option value="Enfermería">Enfermería</option>
 	<option value="Estomatología">Estomatología</option>
 	<option value="Farmacéutico Hospitalario">Farmacéutico Hospitalario</option>
@@ -32,6 +32,7 @@
 	<option value="Medicina del Trabajo">Medicina del Trabajo</option>
 	<option value="Medicina General / Familiar y Comunitaria">Medicina General / Familiar y Comunitaria</option>
 	<option value="Medicina Intensiva">Medicina Intensiva</option>
+	<option value="Medicina Interna">Medicina Interna</option>
 	<option value="Medicina Legal y Forense">Medicina Legal y Forense</option>
 	<option value="Medicina Nuclear">Medicina Nuclear</option>
 	<option value="Medicina Preventiva y Salud Pública">Medicina Preventiva y Salud Pública</option>
