--- a/views/fragments/select-collegenumber1.twig
+++ b/views/fragments/select-collegenumber1.twig
@@ -1,4 +1,5 @@
-<label for="collegenumber1" class="text">Provincia en la que ejerces actualmente</label>
+<label for="collegenumber1" class="text">Provincia en la que ejerces actualmente<sup>*</sup>
+</label>
 <select id="collegenumber1">
 	<option value="hide" selected="selected">Primeros 2 dígitos</option>
 	<option value="01-Álava">01 - Álava</option>
