Change to users in WP

--- a/views/register.twig
+++ b/views/register.twig
@@ -123,14 +123,14 @@
 									</div>
 									<div class="right">
 										<div class="checkbox">
-											<input id="accept2" type="checkbox" value="accept2" class="styled-checkbox">
+											<input id="accept2" type="checkbox" class="styled-checkbox off">
 											<label for="accept2">
 												He leído y acepto
 												<a href="/politica-privacidad" class="link">el aviso legal y la política de privacidad</a>
 											</label>
 										</div>
 										<div class="checkbox">
-											<input id="accept3" type="checkbox" value="accept3" class="styled-checkbox">
+											<input id="accept3" type="checkbox" class="styled-checkbox off">
 											<label for="accept3" class="long-text">
 												Acepto a que Sanofi-Aventis S.A (“Sanofi”) trate mis datos personales facilitados para gestionar las relaciones promocionales conmigo, llevar a cabo segmentación profesional para entender mejor mis intereses y ofrecerme contenido personalizado, y para fines estadísticos, históricos o científicos. Puede usted ajustar de forma individual cada una de las finalidades anteriores. Ver en detalle.
 											</label>
@@ -145,6 +145,5 @@
 				</div>
 			</div>
 		</div>
-		{{ function('acf_form', form_args) }}
 	</main>
 {% endblock %}
