--- a/views/fragments/select-specialties.twig
+++ b/views/fragments/select-specialties.twig
@@ -1,62 +1,65 @@
-<label for="specialty" class="text">Especialidad<sup>*</sup>
-</label>
-<select id="specialty">
-	<option value="hide" selected="selected">Seleccione...</option>
-	<option value="Alergología">Alergología</option>
-	<option value="Anatomía Patológica">Anatomía Patológica</option>
-	<option value="Anestesiología">Anestesiología</option>
-	<option value="Angiología y Cirugía Vascular">Angiología y Cirugía Vascular</option>
-	<option value="Aparato Digestivo">Aparato Digestivo</option>
-	<option value="Bioquímica Clínica">Bioquímica Clínica</option>
-	<option value="Cardiología">Cardiología</option>
-	<option value="Cirugía Cardiovascular">Cirugía Cardiovascular</option>
-	<option value="Cirugía General y del Aparato Digestivo">Cirugía General y del Aparato Digestivo</option>
-	<option value="Cirugía Oral y Maxilofacial">Cirugía Oral y Maxilofacial</option>
-	<option value="Cirugía Pediátrica">Cirugía Pediátrica</option>
-	<option value="Cirugía Plástica, Estética y Reparadora">Cirugía Plástica, Estética y Reparadora</option>
-	<option value="Cirugía Torácica">Cirugía Torácica</option>
-	<option value="Dermatología">Dermatología</option>
-	<option value="Dermatología Médico-Quirúrgica y Venereología">Dermatología Médico-Quirúrgica y Venereología</option>
-	<option value="Endocrinología y Nutrición">Endocrinología y Nutrición</option>
-	<option value="Enfermería">Enfermería</option>
-	<option value="Estomatología">Estomatología</option>
-	<option value="Farmacéutico Hospitalario">Farmacéutico Hospitalario</option>
-	<option value="Farmacéuticos">Farmacéuticos</option>
-	<option value="Farmacología Clínica">Farmacología Clínica</option>
-	<option value="Fisioterapia">Fisioterapia</option>
-	<option value="Geriatría">Geriatría</option>
-	<option value="Hematología y Hemoterapia">Hematología y Hemoterapia</option>
-	<option value="Hidrología Médica">Hidrología Médica</option>
-	<option value="Inmunología">Inmunología</option>
-	<option value="Medicina del Deporte">Medicina del Deporte</option>
-	<option value="Medicina del Trabajo">Medicina del Trabajo</option>
-	<option value="Medicina General / Familiar y Comunitaria">Medicina General / Familiar y Comunitaria</option>
-	<option value="Medicina Intensiva">Medicina Intensiva</option>
-	<option value="Medicina Interna">Medicina Interna</option>
-	<option value="Medicina Legal y Forense">Medicina Legal y Forense</option>
-	<option value="Medicina Nuclear">Medicina Nuclear</option>
-	<option value="Medicina Preventiva y Salud Pública">Medicina Preventiva y Salud Pública</option>
-	<option value="Microbiología y Parasitología">Microbiología y Parasitología</option>
-	<option value="Nefrología">Nefrología</option>
-	<option value="Neumología">Neumología</option>
-	<option value="Neurocirugía">Neurocirugía</option>
-	<option value="Neurofisiología Clínica">Neurofisiología Clínica</option>
-	<option value="Neurología">Neurología</option>
-	<option value="Obstetricia y Ginecología">Obstetricia y Ginecología</option>
-	<option value="Odontología">Odontología</option>
-	<option value="Oftalmología">Oftalmología</option>
-	<option value="Oncología Médica">Oncología Médica</option>
-	<option value="Oncología Radioterápica">Oncología Radioterápica</option>
-	<option value="Ortopedia y Traumatología">Ortopedia y Traumatología</option>
-	<option value="Otorrinolaringología">Otorrinolaringología</option>
-	<option value="Otras especialidades">Otras especialidades</option>
-	<option value="Pediatría">Pediatría</option>
-	<option value="Psicología">Psicología</option>
-	<option value="Psiquiatría">Psiquiatría</option>
-	<option value="Radiodiagnóstico">Radiodiagnóstico</option>
-	<option value="Rehabilitación">Rehabilitación</option>
-	<option value="Reumatología">Reumatología</option>
-	<option value="Traumatología">Traumatología</option>
-	<option value="Urgencias">Urgencias</option>
-	<option value="Urología">Urología</option>
-</select>
+<div>
+	<label for="specialty" class="text">Especialidad<sup>*</sup>
+	</label>
+	<select id="specialty">
+		<option value="hide" selected="selected">Seleccione...</option>
+		<option value="Alergología">Alergología</option>
+		<option value="Anatomía Patológica">Anatomía Patológica</option>
+		<option value="Anestesiología">Anestesiología</option>
+		<option value="Angiología y Cirugía Vascular">Angiología y Cirugía Vascular</option>
+		<option value="Aparato Digestivo">Aparato Digestivo</option>
+		<option value="Bioquímica Clínica">Bioquímica Clínica</option>
+		<option value="Cardiología">Cardiología</option>
+		<option value="Cirugía Cardiovascular">Cirugía Cardiovascular</option>
+		<option value="Cirugía General y del Aparato Digestivo">Cirugía General y del Aparato Digestivo</option>
+		<option value="Cirugía Oral y Maxilofacial">Cirugía Oral y Maxilofacial</option>
+		<option value="Cirugía Pediátrica">Cirugía Pediátrica</option>
+		<option value="Cirugía Plástica, Estética y Reparadora">Cirugía Plástica, Estética y Reparadora</option>
+		<option value="Cirugía Torácica">Cirugía Torácica</option>
+		<option value="Dermatología">Dermatología</option>
+		<option value="Dermatología Médico-Quirúrgica y Venereología">Dermatología Médico-Quirúrgica y Venereología</option>
+		<option value="Endocrinología y Nutrición">Endocrinología y Nutrición</option>
+		<option value="Enfermería">Enfermería</option>
+		<option value="Estomatología">Estomatología</option>
+		<option value="Farmacéutico Hospitalario">Farmacéutico Hospitalario</option>
+		<option value="Farmacéuticos">Farmacéuticos</option>
+		<option value="Farmacología Clínica">Farmacología Clínica</option>
+		<option value="Fisioterapia">Fisioterapia</option>
+		<option value="Geriatría">Geriatría</option>
+		<option value="Hematología y Hemoterapia">Hematología y Hemoterapia</option>
+		<option value="Hidrología Médica">Hidrología Médica</option>
+		<option value="Inmunología">Inmunología</option>
+		<option value="Medicina del Deporte">Medicina del Deporte</option>
+		<option value="Medicina del Trabajo">Medicina del Trabajo</option>
+		<option value="Medicina General / Familiar y Comunitaria">Medicina General / Familiar y Comunitaria</option>
+		<option value="Medicina Intensiva">Medicina Intensiva</option>
+		<option value="Medicina Interna">Medicina Interna</option>
+		<option value="Medicina Legal y Forense">Medicina Legal y Forense</option>
+		<option value="Medicina Nuclear">Medicina Nuclear</option>
+		<option value="Medicina Preventiva y Salud Pública">Medicina Preventiva y Salud Pública</option>
+		<option value="Microbiología y Parasitología">Microbiología y Parasitología</option>
+		<option value="Nefrología">Nefrología</option>
+		<option value="Neumología">Neumología</option>
+		<option value="Neurocirugía">Neurocirugía</option>
+		<option value="Neurofisiología Clínica">Neurofisiología Clínica</option>
+		<option value="Neurología">Neurología</option>
+		<option value="Obstetricia y Ginecología">Obstetricia y Ginecología</option>
+		<option value="Odontología">Odontología</option>
+		<option value="Oftalmología">Oftalmología</option>
+		<option value="Oncología Médica">Oncología Médica</option>
+		<option value="Oncología Radioterápica">Oncología Radioterápica</option>
+		<option value="Ortopedia y Traumatología">Ortopedia y Traumatología</option>
+		<option value="Otorrinolaringología">Otorrinolaringología</option>
+		<option value="Otras especialidades">Otras especialidades</option>
+		<option value="Pediatría">Pediatría</option>
+		<option value="Psicología">Psicología</option>
+		<option value="Psiquiatría">Psiquiatría</option>
+		<option value="Radiodiagnóstico">Radiodiagnóstico</option>
+		<option value="Rehabilitación">Rehabilitación</option>
+		<option value="Reumatología">Reumatología</option>
+		<option value="Traumatología">Traumatología</option>
+		<option value="Urgencias">Urgencias</option>
+		<option value="Urología">Urología</option>
+	</select>
+	<p class="error">Especialidad requerida</p>
+</div>
