--- a/views/login.twig
+++ b/views/login.twig
@@ -21,13 +21,13 @@
 							</div>
 						</div>
 						<div class="checkbox">
-							<input id="accept" type="checkbox" value="accept" class="styled-checkbox" tabindex="-1">
+							<input id="accept" type="checkbox" class="styled-checkbox" tabindex="-1">
 							<label for="accept" tabindex="0">
 								He leído y acepto la
-								<a href="/politica-privacidad" class="link" tabindex="0">política de privacidad</a>
+								<a href="{{site.url}}/politica-privacidad" class="link" tabindex="0">política de privacidad</a>
 							</label>
 						</div>
-						<a id="submit" href="#" class="button button-m" tabindex="0">Acceder</a>
+						<a id="submit" href="#" class="button button-m disabled" tabindex="0">Acceder</a>
 						<input class="hidden submit" type="submit" name="wp-submit" value="Acceder">
 						<input type="hidden" name="redirect_to" value="{{site.url}}/curso/actualizacion-del-abordaje-terapeutico-del-paciente-con-dislipemia">
 					</form>
