--- a/views/home.twig
+++ b/views/home.twig
@@ -52,94 +52,108 @@
 				</div>
 				<div class="right">
 					<div class="module selected">
-						<p class="subheading has-children">Módulo 1. Lípidos, lipoproteínas y dislipemia{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
+						<p class="subheading has-children">Módulo 1. Lípidos, lipoproteínas. Alteraciones del metabolismo lipídico{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
 						<div class="info">
-							<p class="author">Dr. Lluís Masana Marín, como Coordinador</p>
+							<p class="author">Elaborado por el Dr. Valdivielso</p>
 							<p class="program-title">Temas:</p>
 							<p class="program-chapter">Introducción</p>
-							<p class="program-chapter">Metabolismo de las lipoproteínas</p>
-							<p class="program-chapter">Patogenia de las dislipemias</p>
-							<p class="program-chapter">Determinación de lípidos</p>
-							<p class="program-chapter">Conclusiones</p>
-							<p class="program-chapter">Referencias</p>
+							<p class="program-chapter">Lípidos, lipoproteínas</p>
+							<p class="program-chapter">Alteraciones del metabolismo lipídico</p>
 						</div>
 					</div>
 					<div class="module">
 						<p class="subheading has-children">Módulo 2. Enfermedad cardiovascular aterosclerótica{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
 						<div class="info">
-							<p class="author">Dr. Lluís Masana Marín, como Coordinador</p>
+							<p class="author">Elaborado por la Dra. Fernández y el Dr. Cordero</p>
 							<p class="program-title">Temas:</p>
 							<p class="program-chapter">Introducción</p>
-							<p class="program-chapter">Metabolismo de las lipoproteínas</p>
-							<p class="program-chapter">Patogenia de las dislipemias</p>
-							<p class="program-chapter">Determinación de lípidos</p>
-							<p class="program-chapter">Conclusiones</p>
-							<p class="program-chapter">Referencias</p>
+							<p class="program-chapter">Patogenia de la arteriosclerosis. Dislipemia e Inflamación</p>
+							<p class="program-chapter">Marcadores bioquímicos de riesgo cardiovascular</p>
+							<p class="program-chapter">Evaluación de la aterosclerosis subclínica</p>
 						</div>
 					</div>
 					<div class="module">
-						<p class="subheading has-children">Módulo 3. Tratamiento de la dislipemia{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
+						<p class="subheading has-children">Módulo 3. Análisis del riesgo cardiovascular y objetivos terapéuticos{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
 						<div class="info">
-							<p class="author">Dr. Lluís Masana Marín, como Coordinador</p>
+							<p class="author">Elaborado por los Dres. Mostaza, Lahoz y Soriano</p>
 							<p class="program-title">Temas:</p>
-							<p class="program-chapter">Introducción</p>
-							<p class="program-chapter">Metabolismo de las lipoproteínas</p>
-							<p class="program-chapter">Patogenia de las dislipemias</p>
-							<p class="program-chapter">Determinación de lípidos</p>
-							<p class="program-chapter">Conclusiones</p>
-							<p class="program-chapter">Referencias</p>
+							<p class="program-chapter">Análisis del riesgo cardiovascular</p>
+							<p class="program-chapter">Objetivos terapéuticos según el riesgo cardiovascular</p>
+							<p class="program-chapter">Evolución del algoritmo terapéutico en adultos</p>
+							<p class="program-chapter">Evaluación del riesgo cardiovascular en el paciente con enfermedad renal crónica</p>
 						</div>
 					</div>
 					<div class="module">
-						<p class="subheading has-children">Módulo 4. Tratamientos emergentes y en investigación{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
+						<p class="subheading has-children">Módulo 4. Hipercolesterolemia familiar (HF){{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
 						<div class="info">
-							<p class="author">Dr. Lluís Masana Marín, como Coordinador</p>
+							<p class="author">Elaborado por el Dr. Civeira y Dr. Zamora</p>
 							<p class="program-title">Temas:</p>
 							<p class="program-chapter">Introducción</p>
-							<p class="program-chapter">Metabolismo de las lipoproteínas</p>
-							<p class="program-chapter">Patogenia de las dislipemias</p>
-							<p class="program-chapter">Determinación de lípidos</p>
-							<p class="program-chapter">Conclusiones</p>
-							<p class="program-chapter">Referencias</p>
+							<p class="program-chapter">Bases genéticas de la HF. Diagnóstico clínico y genético</p>
+							<p class="program-chapter">Características clínicas en la actualidad</p>
+							<p class="program-chapter">Técnicas de cribado para la detección precoz de la HF</p>
+							<p class="program-chapter">Determinación del riesgo cardiovascular en la HF</p>
+							<p class="program-chapter">Indicaciones terapéuticas en la HF</p>
 						</div>
 					</div>
 					<div class="module">
-						<p class="subheading has-children">Módulo 5. Evidencia{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
+						<p class="subheading has-children">Módulo 5. Evaluación y manejo de la dislipemia en los pacientes con diabetes{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
 						<div class="info">
-							<p class="author">Dr. Lluís Masana Marín, como Coordinador</p>
+							<p class="author">Elaborado por los Dres. Tihanones, Fernández Garcia, Pérez, Gimeno y Soriano</p>
 							<p class="program-title">Temas:</p>
-							<p class="program-chapter">Introducción</p>
-							<p class="program-chapter">Metabolismo de las lipoproteínas</p>
-							<p class="program-chapter">Patogenia de las dislipemias</p>
-							<p class="program-chapter">Determinación de lípidos</p>
-							<p class="program-chapter">Conclusiones</p>
-							<p class="program-chapter">Referencias</p>
+							<p class="program-chapter">¿Qué riesgo cardiovascular tienen los pacientes con diabetes y cómo evaluarlo?</p>
+							<p class="program-chapter">Características y evaluación de la dislipemia en los pacientes con diabetes</p>
+							<p class="program-chapter">Objetivos terapéuticos lipídicos con diabetes</p>
+							<p class="program-chapter">Tratamiento de la dislipemia en el paciente con diabetes</p>
+							<p class="program-chapter">Tratamiento de la dislipemia en el paciente con enfermedad renal crónica</p>
 						</div>
 					</div>
 					<div class="module">
-						<p class="subheading has-children">Módulo 6. Estudios clínicos{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
+						<p class="subheading has-children">Módulo 6. Fármacos actuales para el tratamiento de la dislipemia en prevención cardiovascular{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
 						<div class="info">
-							<p class="author">Dr. Lluís Masana Marín, como Coordinador</p>
+							<p class="author">Elaborado por la Dra. Campuzano y Dr. Arrarte</p>
 							<p class="program-title">Temas:</p>
 							<p class="program-chapter">Introducción</p>
-							<p class="program-chapter">Metabolismo de las lipoproteínas</p>
-							<p class="program-chapter">Patogenia de las dislipemias</p>
-							<p class="program-chapter">Determinación de lípidos</p>
-							<p class="program-chapter">Conclusiones</p>
-							<p class="program-chapter">Referencias</p>
+							<p class="program-chapter">Fármacos hipolipemiantes. Evidencia científica (Estatinas, Ezetimiba, Resinas, Fibratos, Ac Bempedoico), iPCSK9, omega3</p>
+							<p class="program-chapter">Indicaciones y estrategias terapéuticas</p>
+							<p class="program-chapter">Necesidades no cubiertas. Metodología y resultados de los estudios en prácticaclínica</p>
+							<p class="program-chapter">Situaciones especiales</p>
 						</div>
 					</div>
 					<div class="module">
-						<p class="subheading has-children">Módulo 7. Casos clínicos por especialidad{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
+						<p class="subheading has-children">Módulo 7. Tratamientos emergentes y en investigación{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
 						<div class="info">
-							<p class="author">Dr. Lluís Masana Marín, como Coordinador</p>
+							<p class="author">Elaborado por los Dres. Masana, López Miranda y Pérez</p>
 							<p class="program-title">Temas:</p>
 							<p class="program-chapter">Introducción</p>
-							<p class="program-chapter">Metabolismo de las lipoproteínas</p>
-							<p class="program-chapter">Patogenia de las dislipemias</p>
-							<p class="program-chapter">Determinación de lípidos</p>
-							<p class="program-chapter">Conclusiones</p>
-							<p class="program-chapter">Referencias</p>
+							<p class="program-chapter">Conceptos básicos de terapias anti-RNA</p>
+							<p class="program-chapter">Inhibidores (Ac y siRNA) de PCSK9</p>
+							<p class="program-chapter">Inhibidores de Lp(a)</p>
+							<p class="program-chapter">Inhibidores de (Ac y asoRNA) ANGPTL3</p>
+							<p class="program-chapter">Inhibidores de Apo CIII</p>
+						</div>
+					</div>
+					<div class="module">
+						<p class="subheading has-children">Módulo 8. Organización de los procesos asistenciales cardiovasculares más prevalentes{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
+						<div class="info">
+							<p class="author">Elaborado por los Dres. Juanatey, Árias y Álvarez</p>
+							<p class="program-title">Temas:</p>
+							<p class="program-chapter">Introducción</p>
+							<p class="program-chapter">Aspectos generales de la Organización Asistencial por Procesos</p>
+							<p class="program-chapter">Hipercolesterolemia Familiar (HF)</p>
+							<p class="program-chapter">Diabetes</p>
+							<p class="program-chapter">Cardiopatía Isquémica</p>
+							<p class="program-chapter">Arteriopatía Periférica</p>
+							<p class="program-chapter">Enfermedad Renal Crónica</p>
+							<p class="program-chapter">Ictus</p>
+						</div>
+					</div>
+					<div class="module">
+						<p class="subheading has-children">Evaluación final{{ source(directory ~ '/static/img/svg/arrow.svg') }}</p>
+						<div class="info">
+							<p class="program-chapter">Cuestionario</p>
+							<p class="program-chapter">Diploma</p>
+							<p class="program-chapter">Certificado Participación</p>
 						</div>
 					</div>
 				</div>
