--- a/views/module.twig
+++ b/views/module.twig
@@ -49,7 +49,7 @@
 										<p class="subheading">Módulo
 											{{post.custom.module_number}}.</p>
 										<p class="subheading">{{post.custom.title}}</p>
-										<p class="author">{{post.custom.author}}</p>
+										<p class="author">{{post.custom.module_author}}</p>
 									</div>
 									<div id="custom-scroll" class="chapter-wrapper">
 										{% for chapter in chapters %}
